--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.8",
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "next": "12.1.5",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
